<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="auspicious.oyl.Main">

    <TextView
            android:text="@string/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" android:id="@+id/textViewMainTitle"/>

    <EditText
            android:id="@+id/editTextMainAccount"
            android:layout_width="400dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textViewMainTitle"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:id="@+id/textViewMainAccount"
            android:text="@string/account"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editTextMainAccount" android:layout_marginTop="-30dp"
            android:layout_alignParentStart="true"/>

    <EditText
            android:id="@+id/editTextMainPassword"
            android:layout_width="400dp"
            android:layout_height="40dp"
            android:layout_below="@+id/editTextMainAccount"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:id="@+id/textViewMainPassword"
            android:text="@string/password"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editTextMainPassword" android:layout_marginTop="-30dp"
            android:layout_alignParentStart="true"/>
    <Button
            android:id="@+id/buttonMainLogIn"
            android:text="@string/log_in"
            android:layout_width="100dp" android:layout_height="61.8dp"
            android:layout_below="@id/editTextMainPassword"
            android:layout_centerHorizontal="true"
    />
</RelativeLayout>
