<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/linearLayoutAfterLogInFunction"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00b0ff"
    >

        <EditText
                android:id="@+id/editTextAfterLogInSearchAndAdd"
                android:layout_weight="4"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />
        <Button
                android:id="@+id/buttonAfterLogInSearch"
                android:text="@string/search"
                android:layout_weight="1"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
        <Button
                android:id="@+id/buttonAfterLogInAdd"
                android:text="@string/add"
                android:layout_weight="1"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollViewAfterLogIn"
    >
        <LinearLayout
                android:id="@+id/linearLayoutAfterLogInBooks"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >
            <Button
                    android:id="@+id/buttonAfterLogInDefaultBook"
                    android:text="@string/default_book"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
            />
        </LinearLayout>
    </ScrollView>
</LinearLayout>